packages/survey-core/src/default-theme/blocks/sd-formbox.scss
@use "../variables.scss" as *;

.sd-formbox {
    position: static;
    width: 100%;
    box-sizing: border-box;
    padding: var(--sjs2-spacing-x050, 4px);
    display: flex;
    gap: var(--sjs2-spacing-x050, 4px);
    align-items: center;
    background: var(--sjs2-color-component-formbox-default-bg, #f5f5f5);
    border: none;
    border-radius: var(--sjs2-radius-component-formbox, 8px);
    text-align: start;
    box-shadow:
        var(--sjs2-border-effect-component-formbox-default, 0 1px 2px 0 #d4d4d4 inset),
        var(--sjs2-border-effect-component-formbox-focused-reset, 0 0 0 0 #19b394 inset);
    transition: box-shadow $transition-duration;
}
.sd-formbox:where(:focus-within) {
    background: var(--sjs2-color-component-formbox-focused-bg, #f5f5f5);
    box-shadow:
        var(--sjs2-border-effect-component-formbox-default-reset, 0 0 0 0 #d4d4d4 inset),
        var(--sjs2-border-effect-component-formbox-focused, 0 0 0 2px #19b394 inset);

    .sd-formbox__character-counter {
        display: block;
    }
}
.sd-formbox--readonly {
    border-radius: var(--sjs2-radius-component-formbox, 8px);
    background: var(--sjs2-color-component-formbox-readonly-bg, #fff);
    box-shadow: var(--sjs2-border-effect-component-formbox-readonly, 0 0 0 1px #d4d4d4 inset);

    .sd-formbox__input {
        cursor: default;
    }
}
.sd-formbox--preview {
    background: none;
    box-shadow: none;
    transition: none;
    border-bottom: 1px solid $foreground;
    border-radius: 0;
    &,
    .sd-formbox__input {
        padding-left: 0;
        padding-right: 0;
    }
    .sd-formbox__label {
        border: none;
    }
}
.sd-formbox--error {
    background: var(--sjs2-color-component-formbox-invalid-bg, #f5f5f5);
    box-shadow: var(--sjs2-border-effect-component-formbox-invalid, 0 0 0 2px #e50a3e inset);
}

.sd-formbox {
    .sd-formbox {
        display: contents;
    }
}
.sd-formbox__group {
    display: flex;
    align-items: stretch;
    align-self: stretch;
    justify-content: flex-end;
    gap: calcSize(0.5);
    .sv-action {
        height: 100%;
    }
    .sv-action__content {
        height: 100%;
    }
}
.sd-formbox__input {
    box-sizing: border-box;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background: none;
    border: none;
    width: 100%;
    color: var(--sjs2-color-component-input-default-value, #1c1b20);
    text-overflow: ellipsis;
    font-family: var(--sjs2-typography-font-family-component-input-content, "Open Sans");
    font-size: var(--sjs2-typography-font-size-component-input-content, 16px);
    font-style: normal;
    font-weight: var(--sjs2-typography-font-weight-component-input-content, 400);
    line-height: var(--sjs2-typography-line-height-component-input-content, 24px);
    min-height: calc(
        var(--sjs2-typography-line-height-component-input-content, 24px) + var(--sjs2-spacing-x100, 8px) * 2
    );
    padding: var(--sjs2-spacing-x100, 8px) var(--sjs2-spacing-x150, 12px);
    margin: 0;
    &::placeholder {
        color: var(--sjs2-color-component-input-default-placeholder, rgba(28, 27, 32, 0.6));
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }
    &:disabled {
        opacity: 1;
    }
    &:focus {
        outline: none;
    }
    &::-webkit-datetime-edit-fields-wrapper {
        padding: 0;
    }
}
.sd-formbox__label {
    height: calc(100% - #{$base-unit} * 3);
    padding: var(--sjs2-spacing-x100, 8px) calc(var(--sjs2-spacing-x150, 12px) + var(--sjs2-spacing-x050, 4px))
        var(--sjs2-spacing-x100, 8px) var(--sjs2-spacing-x150, 12px);
    max-width: 30%;
    border-right: var(--sjs2-border-width-default, 1px) solid var(--sjs2-color-component-input-default-line, #d4d4d4);
    box-sizing: content-box;
    white-space: normal;
    color: var(--sjs2-color-component-input-default-label, rgba(28, 27, 32, 0.6));
    font-family: var(--sjs2-typography-font-family-component-input-content, "Open Sans");
    font-size: var(--sjs2-typography-font-size-component-input-content, 16px);
    font-style: normal;
    font-weight: var(--sjs2-typography-font-weight-component-input-content, 400);
    line-height: var(--sjs2-typography-line-height-component-input-content, 24px);
}

.sd-formbox__character-counter {
    display: none;
    padding: var(--sjs2-spacing-x075, 6px) var(--sjs2-spacing-x100, 8px);
    color: var(--sjs2-color-component-input-default-limit, rgba(28, 27, 32, 0.6));
    font-family: var(--sjs2-typography-font-family-text, "Open Sans");
    font-size: var(--sjs2-typography-font-size-small, 12px);
    font-style: normal;
    font-weight: 400;
    line-height: var(--sjs2-typography-line-height-small, 16px);
}

@mixin runnable-track {
    background-color: $primary;
    border-radius: calcSize(1);
    height: calcSize(1.5);
}

@mixin slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    margin-top: calcSize(-0.75);
    border-radius: 100%;
    border: 2px solid $primary;
    box-shadow: inset 0 0 0 2px var(--background, #fff);
    background-color: $primary;
    height: calcSize(3);
    width: calcSize(3);
}

.sd-formbox__input[type="range"]::-webkit-slider-runnable-track {
    @include runnable-track;
}

.sd-formbox__input[type="range"]::-webkit-slider-thumb {
    @include slider-thumb;
}

//mozilla
.sd-formbox__input[type="range"]::-moz-range-track {
    @include runnable-track;
}

.sd-formbox__input[type="range"]::-moz-range-thumb {
    @include slider-thumb;
}

